# PokemonAE

./: .gitignore  CMakeLists.txt  README.md
data/entities/: box_pcs.csv  zone_dialogs.csv
data/entities/npcs/: city_1.csv  city_1.ods  city_1_inside.csv  city_1_inside.ods
data/entities/physical_items/: city_1.csv  city_1.ods  road_1.csv  road_1.ods
data/entities/seller_items/: city_1.csv  city_1.ods
data/entities/story_triggers/: city_1.csv  city_1.ods
data/enums/: npc_ids.csv
data/interactions/: city_1.csv  city_1.ods  city_1_inside.csv  city_1_inside.ods  trainer_interactions.csv  trainer_interactions.ods
data/sprites/characters/: brice_texture.pdn
data/sprites/tilesets/: item_set.pdn  tileset.png~
data/zone_changers/: city_1.csv  city_1.ods  city_1_inside.csv  city_1_inside.ods  city_2.csv  city_2.ods  farm_meuh.csv  farm_meuh.ods  road_1.csv  road_1.ods
data/zones/city_1/: city_1.tmx  city_1_bg.csv  city_1_bg_dec.csv  city_1_collisions.csv  city_1_fg.csv  city_1_fg_dec.csv
data/zones/city_1_inside/: city_1_inside_bg.csv  city_1_inside_bg_dec.csv  city_1_inside_collisions.csv  city_1_inside_fg.csv  city_1_inside_fg_dec.csv
data/zones/city_2/: city_2_bg.csv  city_2_bg_dec.csv  city_2_collisions.csv  city_2_fg.csv  city_2_fg_dec.csv  road_1_bg_dec.csv  road_1_collisions.csv  road_1_fg.csv  road_1_fg_dec.csv
data/zones/farm_meuh/: farm_meuh_bg.csv  farm_meuh_bg_dec.csv  farm_meuh_collisions.csv  farm_meuh_fg.csv  farm_meuh_fg_dec.csv
data/zones/road_1/: road_1.tmx  road_1_bg.csv  road_1_bg_dec.csv  road_1_fg.csv
dev_and_design/: Attaques.ods  POKEDEX.ods  Tiled Help.odt  XP.ods  bag_background.pdn  lineCounter  no_console.txt  notes wiki.odt
dev_and_design/UI/: carte dresseur.pdn  evolution.kra  teamInfo.kra
dev_and_design/analyse dresseurs/: .~lock.ruby_omega.ods#  ruby_omega.ods
dev_and_design/guide data files/: NPCs.odt
dev_and_design/story/: Boss.odt  Dialogs_other_dialogs.ods  Dialogs_side_quests.ods  Dialogs_story.csv  Dialogs_story.ods  Histoire principale.odt  Story Trame.odt
dev_and_design/tests maps/: Coal City.tmx  Lugia Way.tmx  Map.tmx  Oasis City.tmx  calis project.tsx  city_1_coast.tmx  city_1_inside.tmx  city_2.tmx  city_2_inside.tmx  farm.tmx  map_pkmn_AE.tiled-session  my_bw_tileset___requests_open_by_chimcharsfireworkd-d3kgucf.png.tsx  road_1.tmx  road_2.tmx  sandbox.tmx  test_shaders.tmx  zone_dialog.tx
dev_and_design/tests maps/world/: pokemon_ae_world.world
dev_and_design/tilesets/: outside.tsx
src/: Constants.hpp  Context.cpp  Context.hpp  Direction.cpp  Direction.h  Enums.hpp  ItemEnums.hpp  Utilities.cpp  Utilities.hpp  main.cpp
src/entities/: BoxPC.cpp  BoxPC.hpp  Champion.cpp  Champion.hpp  Character.cpp  Character.h  Entity.cpp  Entity.hpp  EntityLoader.cpp  EntityLoader.hpp  NPC.cpp  NPC.hpp  NPCId.hpp  PhysicalItem.cpp  PhysicalItem.hpp  ReactionBubble.cpp  ReactionBubble.hpp  Seller.cpp  Seller.hpp  StoryNpcConditions.cpp  Trainer.cpp  Trainer.hpp
src/entities/character/: CharacterBody.cpp  CharacterBody.hpp
src/entities/fabric/: EntityLoaderZones.cpp  MoverFabric.cpp  MoverFabric.hpp  NPCFabric.cpp  NPCFabric.hpp  NPCFabricMaps.cpp
src/entities/interactions/: BadgeInteraction.cpp  BadgeInteraction.hpp  BoxInteraction.cpp  BoxInteraction.hpp  ChoiceInteraction.cpp  ChoiceInteraction.hpp  DialogInteraction.cpp  DialogInteraction.hpp  FightInteraction.cpp  FightInteraction.hpp  Interaction.cpp  (+12 more)
src/fight/: FightAction.hpp  FightAttackSelector.cpp  FightAttackSelector.hpp  FightDialog.cpp  FightDialog.hpp  FightMenuSelector.cpp  FightMenuSelector.hpp  FightPokemonBar.cpp  FightPokemonBar.hpp  FightStage.cpp  FightStage.hpp  PokemonDisplay.cpp  PokemonDisplay.hpp  XPSharer.cpp  XPSharer.hpp
src/game_data/: GameInfo.hpp  TrainerInfo.cpp  TrainerInfo.hpp
src/inventory/: BagItemSelector.cpp  BagItemSelector.hpp  Inventory.cpp  Inventory.hpp  InventoryEntry.cpp  InventoryEntry.hpp  Item.cpp  Item.hpp  ItemDisplay.cpp  ItemDisplay.hpp
src/pokemons/: EVSet.cpp  EVSet.hpp  EvolutionCondition.cpp  EvolutionCondition.hpp  IVSet.cpp  IVSet.hpp  Pokedex.cpp  Pokedex.hpp  PokedexEntry.cpp  PokedexEntry.hpp  Pokemon.cpp  Pokemon.hpp  PokemonCreator.cpp  PokemonCreator.hpp  PokemonID.cpp  PokemonID.hpp  PokemonNature.cpp  PokemonNature.hpp  PokemonSex.cpp  PokemonSex.hpp  PokemonTeam.cpp  PokemonTeam.hpp  Stats.cpp  Stats.hpp  Type.cpp  Type.hpp  XPCurves.cpp  XPCurves.hpp
src/predicates/: AttackPredicate.cpp  AttackPredicate.hpp  ItemPredicate.cpp  ItemPredicate.hpp
src/resources/: FontHolder.cpp  FontHolder.hpp  InteractionHolder.cpp  InteractionHolder.hpp  MusicPlayer.cpp  MusicPlayer.hpp  Musics.h  SoundBufferHolder.cpp  SoundBufferHolder.hpp  SoundEffects.hpp  SoundPlayer.cpp  SoundPlayer.hpp  TextureHolder.cpp  TextureHolder.hpp
src/states/: BackHealerState.cpp  BackHealerState.hpp  BadgeState.cpp  BadgeState.hpp  BagState.cpp  BagState.hpp  BlackState.cpp  BlackState.hpp  BoxInfoState.cpp  BoxInfoState.hpp  BoxState.cpp  BoxState.hpp  BuyingState.cpp  BuyingState.hpp  CharacterInfoState.cpp  CharacterInfoState.hpp  ChoiceState.cpp  ChoiceState.hpp  ChooseNameState.cpp  ChooseNameState.hpp  ChoosePokemonNameState.cpp  ChoosePokemonNameState.hpp  DialogState.cpp  DialogState.hpp  EntityMoveState.cpp  EntityMoveState.hpp  EvolutionState.cpp  EvolutionState.hpp  FightState2.cpp  FightState2.hpp  ForceMoveState.cpp  ForceMoveState.hpp  GameEvent.cpp  GameEvent.hpp  GameState.cpp  GameState.hpp  HealState.cpp  HealState.hpp  ItemState.cpp  ItemState.hpp  (+29 more)
src/team/: TeamEntry.cpp  TeamEntry.hpp
src/ui/: BadgeBox.cpp  BadgeBox.hpp  ChoiceMenu.cpp  ChoiceMenu.hpp  DebugPanel.cpp  DebugPanel.hpp
src/utility/: CSVParser.cpp  CSVParser.hpp  Date.cpp  Date.hpp  EnumLoader.cpp  EnumLoader.hpp  Logger.cpp  Logger.hpp
src/zones/: CollisionLayer.cpp  CollisionLayer.hpp  FieldObject.cpp  FieldObject.hpp  StoryTrigger.cpp  StoryTrigger.hpp  Zone.cpp  Zone.hpp  ZoneChanger.cpp  ZoneChanger.hpp  ZoneDialog.cpp  ZoneDialog.hpp  ZoneDialogLoader.cpp  ZoneDialogLoader.hpp  ZoneID.hpp  ZoneLayer.cpp  ZoneLayer.hpp
(+150 files in other folders)
