cmake_minimum_required(VERSION 3.8)
project(PokemonAE)

set(CMAKE_CXX_STANDARD 11)

## In most cases better set in the CMake cache
set(SFML_DIR "./SFML-2.5.1/lib/cmake/SFML")

find_package(SFML 2.5 COMPONENTS system window graphics audio REQUIRED)

set(SOURCE_FILES
        src/entities/character/CharacterBody.cpp
        src/entities/character/CharacterBody.hpp
        src/entities/fabric/EntityLoaderZones.cpp
        src/entities/fabric/MoverFabric.cpp
        src/entities/fabric/MoverFabric.hpp
        src/entities/fabric/NPCFabric.cpp
        src/entities/fabric/NPCFabric.hpp
        src/entities/fabric/NPCFabricMaps.cpp
        src/entities/interactions/BadgeInteraction.cpp
        src/entities/interactions/BadgeInteraction.hpp
        src/entities/interactions/BoxInteraction.cpp
        src/entities/interactions/BoxInteraction.hpp
        src/entities/interactions/ChoiceInteraction.cpp
        src/entities/interactions/ChoiceInteraction.hpp
        src/entities/interactions/DialogInteraction.cpp
        src/entities/interactions/DialogInteraction.hpp
        src/entities/interactions/FightInteraction.cpp
        src/entities/interactions/FightInteraction.hpp
        src/entities/interactions/HealInteraction.cpp
        src/entities/interactions/HealInteraction.hpp
        src/entities/interactions/Interaction.cpp
        src/entities/interactions/Interaction.hpp
        src/entities/interactions/InteractionCondition.hpp
        src/entities/interactions/ItemInteraction.cpp
        src/entities/interactions/ItemInteraction.hpp
        src/entities/interactions/MoveInteraction.cpp
        src/entities/interactions/MoveInteraction.hpp
        src/entities/interactions/ReactionInteraction.cpp
        src/entities/interactions/ReactionInteraction.hpp
        src/entities/interactions/SellerInteraction.cpp
        src/entities/interactions/SellerInteraction.hpp
        src/entities/movements/CharacterMover.cpp
        src/entities/movements/CharacterMover.hpp
        src/entities/movements/ContinuousMover.cpp
        src/entities/movements/ContinuousMover.hpp
        src/entities/movements/EntityMover.cpp
        src/entities/movements/EntityMover.hpp
        src/entities/movements/MoverHeaders.hpp
        src/entities/movements/NoMover.cpp
        src/entities/movements/NoMover.hpp
        src/entities/movements/RandomMover.cpp
        src/entities/movements/RandomMover.hpp
        src/entities/movements/RotationnalMover.cpp
        src/entities/movements/RotationnalMover.hpp
        src/entities/movements/SequenceMover.cpp
        src/entities/movements/SequenceMover.hpp
        src/entities/npcs/conditions/Condition.cpp
        src/entities/npcs/conditions/Condition.hpp
        src/entities/npcs/NpcType.cpp
        src/entities/npcs/NpcType.hpp
        src/entities/BoxPC.cpp
        src/entities/BoxPC.hpp
        src/entities/Champion.cpp
        src/entities/Champion.hpp
        src/entities/Character.cpp
        src/entities/Character.h
        src/entities/Entity.cpp
        src/entities/Entity.hpp
        src/entities/EntityLoader.cpp
        src/entities/EntityLoader.hpp
        src/entities/NPC.cpp
        src/entities/NPC.hpp
        src/entities/NPCId.hpp
        src/entities/PhysicalItem.cpp
        src/entities/PhysicalItem.hpp
        src/entities/ReactionBubble.cpp
        src/entities/ReactionBubble.hpp
        src/entities/Seller.cpp
        src/entities/Seller.hpp
        src/entities/StoryNpcConditions.cpp
        src/entities/Trainer.cpp
        src/entities/Trainer.hpp
        src/fight/ennemy_manager/FightEnnemyManager.hpp
        src/fight/ennemy_manager/FightTrainerManager.cpp
        src/fight/ennemy_manager/FightTrainerManager.hpp
        src/fight/ennemy_manager/FightWildManager.cpp
        src/fight/ennemy_manager/FightWildManager.hpp
        src/fight/FightAction.hpp
        src/fight/FightAttackSelector.cpp
        src/fight/FightAttackSelector.hpp
        src/fight/FightDialog.cpp
        src/fight/FightDialog.hpp
        src/fight/FightMenuSelector.cpp
        src/fight/FightMenuSelector.hpp
        src/fight/FightPokemonBar.cpp
        src/fight/FightPokemonBar.hpp
        src/fight/FightStage.cpp
        src/fight/FightStage.hpp
        src/fight/PokemonDisplay.cpp
        src/fight/PokemonDisplay.hpp
        src/fight/XPSharer.cpp
        src/fight/XPSharer.hpp
        src/game_data/GameInfo.hpp
        src/game_data/TrainerInfo.cpp
        src/game_data/TrainerInfo.hpp
        src/inventory/items/components/CritBoosterComponent.cpp
        src/inventory/items/components/CritBoosterComponent.hpp
        src/inventory/items/components/EvBoostComponent.cpp
        src/inventory/items/components/EvBoostComponent.hpp
        src/inventory/items/components/EvoluStatComponent.cpp
        src/inventory/items/components/EvoluStatComponent.hpp
        src/inventory/items/components/EvolutionComponent.cpp
        src/inventory/items/components/EvolutionComponent.hpp
        src/inventory/items/components/HappinessBoostComponent.cpp
        src/inventory/items/components/HappinessBoostComponent.hpp
        src/inventory/items/components/HealConfusionComponent.cpp
        src/inventory/items/components/HealConfusionComponent.hpp
        src/inventory/items/components/HealHPComponent.cpp
        src/inventory/items/components/HealHPComponent.hpp
        src/inventory/items/components/HealStatusComponent.cpp
        src/inventory/items/components/HealStatusComponent.hpp
        src/inventory/items/components/MoneyBoostComponent.cpp
        src/inventory/items/components/MoneyBoostComponent.hpp
        src/inventory/items/components/RestorePPComponent.cpp
        src/inventory/items/components/RestorePPComponent.hpp
        src/inventory/items/components/ReviveComponent.cpp
        src/inventory/items/components/ReviveComponent.hpp
        src/inventory/items/components/StatBoostComponent.cpp
        src/inventory/items/components/StatBoostComponent.hpp
        src/inventory/items/components/TypeBoostComponent.cpp
        src/inventory/items/components/TypeBoostComponent.hpp
        src/inventory/items/components/XPBoostComponent.cpp
        src/inventory/items/components/XPBoostComponent.hpp
        src/inventory/items/effects/EvolutionItemEffect.cpp
        src/inventory/items/effects/EvolutionItemEffect.hpp
        src/inventory/items/effects/ItemEffect.cpp
        src/inventory/items/effects/ItemEffect.hpp
        src/inventory/items/ItemComponent.cpp
        src/inventory/items/ItemComponent.hpp
        src/inventory/items/ItemComponentsData.cpp
        src/inventory/items/ItemDataMaps.cpp
        src/inventory/BagItemSelector.cpp
        src/inventory/BagItemSelector.hpp
        src/inventory/Inventory.cpp
        src/inventory/Inventory.hpp
        src/inventory/InventoryEntry.cpp
        src/inventory/InventoryEntry.hpp
        src/inventory/Item.cpp
        src/inventory/Item.hpp
        src/inventory/ItemDisplay.cpp
        src/inventory/ItemDisplay.hpp
        src/pokemons/abilities/Ability.cpp
        src/pokemons/abilities/Ability.hpp
        src/pokemons/abilities/AbilityEffect.cpp
        src/pokemons/abilities/AbilityEffect.hpp
        src/pokemons/abilities/AbilityID.hpp
        src/pokemons/attacks/Attack.cpp
        src/pokemons/attacks/Attack.hpp
        src/pokemons/attacks/AttackDisplay.cpp
        src/pokemons/attacks/AttackDisplay.hpp
        src/pokemons/attacks/AttackFabric.cpp
        src/pokemons/attacks/AttackFabric.hpp
        src/pokemons/attacks/AttackID.hpp
        src/pokemons/attacks/AttackSet.cpp
        src/pokemons/attacks/AttackSet.hpp
        src/pokemons/attacks/MeteoEffects.hpp
        src/pokemons/attacks/StatsChanger.cpp
        src/pokemons/attacks/StatsChanger.hpp
        src/pokemons/boxes/BoxSystem.cpp
        src/pokemons/boxes/BoxSystem.hpp
        src/pokemons/boxes/PokemonBox.cpp
        src/pokemons/boxes/PokemonBox.hpp
        src/pokemons/creators/StrategicPokemonFabric.cpp
        src/pokemons/creators/StrategicPokemonFabric.hpp
        src/pokemons/pokemons/PokemonMetadata.cpp
        src/pokemons/pokemons/PokemonMetadata.hpp
        src/pokemons/status/MainStatus.cpp
        src/pokemons/status/MainStatus.hpp
        src/pokemons/teamPreview/TeamPreview.cpp
        src/pokemons/teamPreview/TeamPreview.hpp
        src/pokemons/teamPreview/TeamPreviewUnit.cpp
        src/pokemons/teamPreview/TeamPreviewUnit.hpp
        src/pokemons/EvolutionCondition.cpp
        src/pokemons/EvolutionCondition.hpp
        src/pokemons/EVSet.cpp
        src/pokemons/EVSet.hpp
        src/pokemons/IVSet.cpp
        src/pokemons/IVSet.hpp
        src/pokemons/Pokedex.cpp
        src/pokemons/Pokedex.hpp
        src/pokemons/PokedexEntry.cpp
        src/pokemons/PokedexEntry.hpp
        src/pokemons/Pokemon.cpp
        src/pokemons/Pokemon.hpp
        src/pokemons/PokemonCreator.cpp
        src/pokemons/PokemonCreator.hpp
        src/pokemons/PokemonID.cpp
        src/pokemons/PokemonID.hpp
        src/pokemons/PokemonNature.cpp
        src/pokemons/PokemonNature.hpp
        src/pokemons/PokemonSex.cpp
        src/pokemons/PokemonSex.hpp
        src/pokemons/PokemonTeam.cpp
        src/pokemons/PokemonTeam.hpp
        src/pokemons/Stats.cpp
        src/pokemons/Stats.hpp
        src/pokemons/Type.cpp
        src/pokemons/Type.hpp
        src/pokemons/XPCurves.cpp
        src/pokemons/XPCurves.hpp
        src/predicates/AttackPredicate.cpp
        src/predicates/AttackPredicate.hpp
        src/predicates/ItemPredicate.cpp
        src/predicates/ItemPredicate.hpp
        src/resources/FontHolder.cpp
        src/resources/FontHolder.hpp
        src/resources/InteractionHolder.cpp
        src/resources/InteractionHolder.hpp
        src/resources/TextureHolder.cpp
        src/resources/TextureHolder.hpp
        src/states/BackHealerState.cpp
        src/states/BackHealerState.hpp
        src/states/BadgeState.cpp
        src/states/BadgeState.hpp
        src/states/BagState.cpp
        src/states/BagState.hpp
        src/states/BlackState.cpp
        src/states/BlackState.hpp
        src/states/BoxInfoState.cpp
        src/states/BoxInfoState.hpp
        src/states/BoxState.cpp
        src/states/BoxState.hpp
        src/states/BuyingState.cpp
        src/states/BuyingState.hpp
        src/states/CharacterInfoState.cpp
        src/states/CharacterInfoState.hpp
        src/states/ChoiceState.cpp
        src/states/ChoiceState.hpp
        src/states/ChooseNameState.cpp
        src/states/ChooseNameState.hpp
        src/states/ChoosePokemonNameState.cpp
        src/states/ChoosePokemonNameState.hpp
        src/states/DialogState.cpp
        src/states/DialogState.hpp
        src/states/EntityMoveState.cpp
        src/states/EntityMoveState.hpp
        src/states/EvolutionState.cpp
        src/states/EvolutionState.hpp
        src/states/FightState2.cpp
        src/states/FightState2.hpp
        src/states/ForceMoveState.cpp
        src/states/ForceMoveState.hpp
        src/states/GameEvent.cpp
        src/states/GameEvent.hpp
        src/states/GameState.cpp
        src/states/GameState.hpp
        src/states/HealState.cpp
        src/states/HealState.hpp
        src/states/ItemState.cpp
        src/states/ItemState.hpp
        src/states/LearnAttackState.cpp
        src/states/LearnAttackState.hpp
        src/states/MenuState.cpp
        src/states/MenuState.hpp
        src/states/PokedexState.cpp
        src/states/PokedexState.hpp
        src/states/ReactionState.cpp
        src/states/ReactionState.hpp
        src/states/SellerActionState.cpp
        src/states/SellerActionState.hpp
        src/states/SellerState.cpp
        src/states/SellerState.hpp
        src/states/State.cpp
        src/states/State.hpp
        src/states/StateID.hpp
        src/states/StateStack.cpp
        src/states/StateStack.hpp
        src/states/TeamInfoState.cpp
        src/states/TeamInfoState.hpp
        src/states/TeamState.cpp
        src/states/TeamState.hpp
        src/states/TrainerState.cpp
        src/states/TrainerState.hpp
        src/states/TransitionState.cpp
        src/states/TransitionState.hpp
        src/states/ZoneNameState.cpp
        src/states/ZoneNameState.hpp
        src/states/SelectAttackState.cpp
        src/states/SelectAttackState.hpp
        src/team/TeamEntry.cpp
        src/team/TeamEntry.hpp
        src/ui/fight/AbilityDisplay.cpp
        src/ui/fight/AbilityDisplay.hpp
        src/ui/fight/PokemonFightDisplay.cpp
        src/ui/fight/PokemonFightDisplay.hpp
        src/ui/pokemon/AttackInfoDisplay.cpp
        src/ui/pokemon/AttackInfoDisplay.hpp
        src/ui/pokemon/HealthBar.cpp
        src/ui/pokemon/HealthBar.hpp
        src/ui/pokemon/MainStatusDisplay.cpp
        src/ui/pokemon/MainStatusDisplay.hpp
        src/ui/pokemon/PokeInfoDisplay.cpp
        src/ui/pokemon/PokeInfoDisplay.hpp
        src/ui/pokemon/PokemonMiniDisplay.cpp
        src/ui/pokemon/PokemonMiniDisplay.hpp
        src/ui/pokemon/PokemonStatGraph.cpp
        src/ui/pokemon/PokemonStatGraph.hpp
        src/ui/pokemon/SexDisplay.cpp
        src/ui/pokemon/SexDisplay.hpp
        src/ui/pokemon/StatDisplay.cpp
        src/ui/pokemon/StatDisplay.hpp
        src/ui/pokemon/TypeDisplay.cpp
        src/ui/pokemon/TypeDisplay.hpp
        src/ui/pokemon/UIPokedexInfos.cpp
        src/ui/pokemon/UIPokedexInfos.hpp
        src/ui/pokemon/VerticalAttackDisplay.cpp
        src/ui/pokemon/VerticalAttackDisplay.hpp
        src/ui/pokemon/XPBar.cpp
        src/ui/pokemon/XPBar.hpp
        src/ui/seller/SellEntry.cpp
        src/ui/seller/SellEntry.hpp
        src/ui/states/EvolutionStateUI.cpp
        src/ui/states/EvolutionStateUI.hpp
        src/ui/states/UIBadgeState.cpp
        src/ui/states/UIBadgeState.hpp
        src/ui/states/UIBoxState.cpp
        src/ui/states/UIBoxState.hpp
        src/ui/states/UIBuyingState.cpp
        src/ui/states/UIBuyingState.hpp
        src/ui/states/UICharacterInfoState.cpp
        src/ui/states/UICharacterInfoState.hpp
        src/ui/states/UIFightState.cpp
        src/ui/states/UIFightState.hpp
        src/ui/states/UILearnAttackState.cpp
        src/ui/states/UILearnAttackState.hpp
        src/ui/states/UIPokedexState.cpp
        src/ui/states/UIPokedexState.hpp
        src/ui/states/UIPokemonInfo.cpp
        src/ui/states/UIPokemonInfo.hpp
        src/ui/states/UISellerState.cpp
        src/ui/states/UISellerState.hpp
        src/ui/states/UITeamInfoState.cpp
        src/ui/states/UITeamInfoState.hpp
        src/ui/tools/CenteredText.cpp
        src/ui/tools/CenteredText.hpp
        src/ui/tools/NameChooser.cpp
        src/ui/tools/NameChooser.hpp
        src/ui/BadgeBox.cpp
        src/ui/BadgeBox.hpp
        src/ui/ChoiceMenu.cpp
        src/ui/ChoiceMenu.hpp
        src/ui/DebugPanel.cpp
        src/ui/DebugPanel.hpp
        src/utility/CSVParser.cpp
        src/utility/CSVParser.hpp
        src/utility/Date.cpp
        src/utility/Date.hpp
        src/utility/EnumLoader.cpp
        src/utility/EnumLoader.hpp
        src/utility/Logger.cpp
        src/utility/Logger.hpp
        src/zones/managers/WildPokemonManager.cpp
        src/zones/managers/WildPokemonManager.hpp
        src/zones/CollisionLayer.cpp
        src/zones/CollisionLayer.hpp
        src/zones/FieldObject.cpp
        src/zones/FieldObject.hpp
        src/zones/StoryTrigger.cpp
        src/zones/StoryTrigger.hpp
        src/zones/Zone.cpp
        src/zones/Zone.hpp
        src/zones/ZoneChanger.cpp
        src/zones/ZoneChanger.hpp
        src/zones/ZoneDialog.cpp
        src/zones/ZoneDialog.hpp
        src/zones/ZoneDialogLoader.cpp
        src/zones/ZoneDialogLoader.hpp
        src/zones/ZoneID.hpp
        src/zones/ZoneLayer.cpp
        src/zones/ZoneLayer.hpp
        src/Constants.hpp
        src/Context.cpp
        src/Context.hpp
        src/Direction.cpp
        src/Direction.h
        src/Enums.hpp
        src/ItemEnums.hpp
        src/main.cpp
        src/Utilities.cpp
        src/Utilities.hpp)

add_executable(PokemonAE ${SOURCE_FILES})
target_link_libraries(PokemonAE sfml-system sfml-window sfml-graphics sfml-audio)